# pico-freertos-setup

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  main.c
freertos/: CMakeLists.txt  FreeRTOSConfig.h  cpp_mem.cpp  hooks.c
